[package]

name = "mime"
version = "0.4.0-a.0" # remember to update html_root_url
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
description = "Strongly Typed Mimes"
documentation = "https://docs.rs/mime"
repository = "https://github.com/hyperium/mime"
keywords = ["mime", "media-extensions", "media-types"]
edition = "2018"

publish = false # breaking changes from 0.3.x

[dependencies]
quoted-string = "0.2.2"
mime-macro = { path = "./mime-macro", optional = true }
mime-parse = { path = "./mime-parse" }
proc-macro-hack = { version = "0.5", optional = true }

[features]
macro = ["mime-macro", "proc-macro-hack"]

[workspace]
members = [
    "./",
    "mime-macro",
    "mime-parse",
]
