[package]

name = "mime"
version = "0.4.0-a.0" # remember to update html_root_url
authors = ["Sean McArthur <sean@seanmonstar.com>"]
license = "MIT"
description = "Strongly Typed Mimes"
documentation = "https://docs.rs/mime"
repository = "https://github.com/hyperium/mime"
keywords = ["mime", "media-extensions", "media-types"]
edition = "2018"

publish = false # breaking changes from 0.3.x

[dependencies]
mime-macro = { path = "./mime-macro", optional = true }
mime-parse = { path = "./mime-parse" }
proc-macro-hack = { version = "0.5", optional = true }
quoted-string = "0.2.2"
serde1 = { version = "1", optional = true, package = "serde" }

[features]
macro = ["mime-macro", "proc-macro-hack"]
# "serde1" optional support

[workspace]
members = [
    "./",
    "mime-macro",
    "mime-parse",
]
